# ai-slate

./: .gitignore  .nixpacksignore  README.md  config.py  deploy.sh  main.py  nixpacks.toml  pyproject.toml  supabase_schema.sql  websocket.py
frontend/: README.md  agents.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: capture-worklet.js
frontend/src/: App.js  index.css
frontend/src/components/: Homepage.js  PageTabs.js  Playground.js  ProtectedRoute.js  Sidebar.js  TLDrawWhiteboard.js  TextElement.js  UserProfile.js
frontend/src/hooks/: useAuth.js  useNotebooks.js  useWebSocket.js
frontend/src/lib/: supabase.js
frontend/src/styles/: App.css  Homepage.css  PageTabs.css  Sidebar.css  Whiteboard.css
frontend/src/utils/: storage.js  supabaseStorage.js
tools/: __init__.py  pure_text_tool.py  shape_tool.py  svg_tool.py  tools_handler.py  undo_tool.py
